--- a/index.html
+++ b/index.html
@@ -2,124 +2,156 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <title>Tirumala TVS | Authorized TVS Dealer in Bidarahalli, Bengaluru</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tirumala TVS | Authorized TVS Dealer</title>
-
-  <!-- CSS -->
+  <meta name="description" content="Tirumala TVS is an authorized TVS dealer in Bidarahalli, Bengaluru. Explore TVS bikes & scooters, book test rides, service and genuine spare parts." />
   <link rel="stylesheet" href="css/style.css" />
-
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
-  <!-- ================= HEADER ================= -->
-  <header class="site-header">
-    <div class="container header-flex">
-      <div class="logo">Tirumala TVS</div>
+<!-- HEADER -->
+<header style="border-bottom:1px solid #e5e7eb;">
+  <div style="max-width:1200px;margin:auto;padding:16px;display:flex;justify-content:space-between;align-items:center;">
+    <h2 style="margin:0;">Tirumala TVS</h2>
+    <nav>
+      <a href="index.html" style="margin-right:16px;">Home</a>
+      <a href="models.html" style="margin-right:16px;">Models</a>
+      <a href="contacts.html">Contact</a>
+    </nav>
+  </div>
+</header>
 
-      <nav class="nav">
-        <a href="index.html">Home</a>
-        <a href="models.html">Models</a>
-        <a href="contacts.html">Contact</a>
-      </nav>
-    </div>
-  </header>
+<!-- HERO -->
+<section style="background:#0b4fd8;color:#fff;">
+  <div style="max-width:1200px;margin:auto;padding:70px 16px;">
+    <h1 style="font-size:46px;margin-bottom:12px;">
+      Welcome to Tirumala TVS
+    </h1>
+    <p style="font-size:20px;max-width:700px;opacity:0.95;">
+      Your trusted authorized TVS dealership in Bidarahalli, Bengaluru —
+      offering the complete range of TVS motorcycles, scooters, electric vehicles,
+      service and genuine spare parts.
+    </p>
 
-  <!-- ================= HERO ================= -->
-  <section class="hero">
-    <div class="container hero-content">
-      <h1>Authorized TVS Two-Wheeler Dealer</h1>
-      <p>
-        Sales • Service • Genuine Spare Parts • Finance & Insurance<br>
-        <strong>Bidarahalli, Bengaluru</strong>
-      </p>
-      <a href="models.html" class="btn-primary">Explore TVS Models</a>
-    </div>
-  </section>
+    <a href="models.html"
+       style="display:inline-block;margin-top:24px;padding:14px 30px;background:#fff;color:#0b4fd8;border-radius:6px;text-decoration:none;font-weight:600;">
+      Explore TVS Models
+    </a>
+  </div>
+</section>
 
-  <!-- ================= MODELS ================= -->
-  <section class="models-section">
-    <div class="container">
-      <h2>TVS Bikes & Scooters</h2>
+<!-- ABOUT -->
+<section style="max-width:1200px;margin:auto;padding:60px 16px;">
+  <h2 style="color:#0b4fd8;font-size:32px;margin-bottom:16px;">
+    About Tirumala TVS
+  </h2>
 
-      <div class="models-grid">
+  <p style="max-width:900px;">
+    Tirumala TVS is an authorized TVS Motor Company dealership located at
+    Bidarahalli, Bengaluru. We are committed to delivering a premium two-wheeler
+    buying and ownership experience. From stylish commuter scooters to
+    performance-oriented motorcycles and electric mobility solutions,
+    we cater to every rider’s need.
+  </p>
+</section>
 
-        <div class="model-card">
-          <h3>TVS XL 100</h3>
-          <p>India’s most trusted moped for work and business.</p>
-          <a href="models/xl100.html">View Details →</a>
-        </div>
+<!-- WHY CHOOSE US -->
+<section style="background:#f5f7fb;">
+  <div style="max-width:1200px;margin:auto;padding:60px 16px;">
+    <h2 style="color:#0b4fd8;font-size:32px;margin-bottom:24px;">
+      Why Choose Tirumala TVS?
+    </h2>
 
-        <div class="model-card">
-          <h3>TVS Zest 110</h3>
-          <p>Lightweight scooter for effortless city riding.</p>
-          <a href="models/zest110.html">View Details →</a>
-        </div>
+    <ul style="line-height:2;">
+      <li>Authorized TVS sales, service and spares</li>
+      <li>Complete range of TVS bikes, scooters and EVs</li>
+      <li>Experienced service technicians</li>
+      <li>Transparent pricing and genuine spare parts</li>
+      <li>Easy finance, insurance and exchange options</li>
+    </ul>
+  </div>
+</section>
 
-        <div class="model-card">
-          <h3>TVS Jupiter 113</h3>
-          <p>Comfortable family scooter with refined ride quality.</p>
-          <a href="models/jupiter113.html">View Details →</a>
-        </div>
+<!-- MODELS OVERVIEW -->
+<section style="max-width:1200px;margin:auto;padding:60px 16px;">
+  <h2 style="color:#0b4fd8;font-size:32px;margin-bottom:24px;">
+    Our TVS Product Range
+  </h2>
 
-        <div class="model-card">
-          <h3>TVS Jupiter 125</h3>
-          <p>Premium scooter with power, comfort and boot space.</p>
-          <a href="models/jupiter125.html">View Details →</a>
-        </div>
+  <div style="line-height:2;">
+    <strong>Scooters:</strong>
+    XL 100, Zest 110, Jupiter 113, Jupiter 125, Ntorq 125, Ntorq 150, iQube Electric  
+    <br/><br/>
+    <strong>Motorcycles:</strong>
+    Raider, Apache RTR 160, Apache RTR 200, Apache RR 310, Ronin
+  </div>
 
-        <div class="model-card">
-          <h3>TVS Ntorq 125</h3>
-          <p>Sporty performance scooter with smart features.</p>
-          <a href="models/ntorq125.html">View Details →</a>
-        </div>
+  <a href="models.html"
+     style="display:inline-block;margin-top:20px;padding:12px 26px;background:#0b4fd8;color:#fff;border-radius:6px;text-decoration:none;">
+    View All Models
+  </a>
+</section>
 
-        <div class="model-card">
-          <h3>TVS Ntorq 150</h3>
-          <p>High-performance street scooter.</p>
-          <a href="models/ntorq150.html">View Details →</a>
-        </div>
+<!-- SERVICES -->
+<section style="background:#f5f7fb;">
+  <div style="max-width:1200px;margin:auto;padding:60px 16px;">
+    <h2 style="color:#0b4fd8;font-size:32px;margin-bottom:24px;">
+      Sales & Services
+    </h2>
 
-        <div class="model-card">
-          <h3>TVS Raider</h3>
-          <p>Sporty commuter with modern technology.</p>
-          <a href="models/raider.html">View Details →</a>
-        </div>
+    <ul style="line-height:2;">
+      <li>New two-wheeler sales</li>
+      <li>Authorized TVS service center</li>
+      <li>Genuine TVS spare parts & accessories</li>
+      <li>Finance and insurance assistance</li>
+      <li>Exchange facility</li>
+    </ul>
+  </div>
+</section>
 
-        <div class="model-card">
-          <h3>TVS Apache Series</h3>
-          <p>Performance motorcycles inspired by racing.</p>
-          <a href="models/apache160.html">View Details →</a>
-        </div>
+<!-- LOCATION -->
+<section style="max-width:1200px;margin:auto;padding:60px 16px;">
+  <h2 style="color:#0b4fd8;font-size:32px;margin-bottom:16px;">
+    Visit Our Showroom
+  </h2>
 
-        <div class="model-card">
-          <h3>TVS Ronin</h3>
-          <p>Modern-retro motorcycle with torque-rich performance.</p>
-          <a href="models/ronin.html">View Details →</a>
-        </div>
+  <p style="max-width:900px;">
+    D Cross, Bidarahalli Main Road, Cheemasandra,  
+    Bengaluru, Karnataka – 560049
+  </p>
 
-        <div class="model-card">
-          <h3>TVS iQube</h3>
-          <p>Smart electric scooter for urban mobility.</p>
-          <a href="models/iqube.html">View Details →</a>
-        </div>
+  <p>
+    📞 <strong>Phone / WhatsApp:</strong> 9964946512  
+    <br/>
+    📧 <strong>Email:</strong> tirumalatvs716@gmail.com
+  </p>
+</section>
 
-      </div>
-    </div>
-  </section>
+<!-- CTA -->
+<section style="background:#0b4fd8;color:#fff;">
+  <div style="max-width:1200px;margin:auto;padding:60px 16px;">
+    <h2 style="font-size:34px;margin-bottom:12px;">
+      Ready to Ride with TVS?
+    </h2>
+    <p style="font-size:18px;max-width:700px;">
+      Visit Tirumala TVS today or contact us to book a test ride, service appointment
+      or to know the best offers on TVS two-wheelers.
+    </p>
 
-  <!-- ================= FOOTER ================= -->
-  <footer class="site-footer">
-    <div class="container">
-      <p>
-        Tirumala TVS<br>
-        Bidarahalli, Bengaluru
-      </p>
-      <p>© 2026 Tirumala TVS. All rights reserved.</p>
-    </div>
-  </footer>
+    <a href="contacts.html"
+       style="display:inline-block;margin-top:20px;padding:14px 30px;background:#fff;color:#0b4fd8;border-radius:6px;text-decoration:none;font-weight:600;">
+      Contact Us
+    </a>
+  </div>
+</section>
+
+<!-- FOOTER -->
+<footer style="border-top:1px solid #e5e7eb;">
+  <div style="max-width:1200px;margin:auto;padding:20px 16px;text-align:center;">
+    © 2026 Tirumala TVS. All rights reserved.
+  </div>
+</footer>
 
 </body>
 </html>
