--- a/index.html
+++ b/index.html
@@ -2,148 +2,92 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Tirumala TVS | Authorized TVS Dealer in Bidarahalli, Bengaluru</title>
+  <title>Tirumala TVS | Authorized TVS Dealer – Bengaluru</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Tirumala TVS is an authorized TVS dealer in Bidarahalli, Bengaluru. Explore TVS bikes & scooters, book test rides, service and genuine spare parts." />
+  <meta name="description" content="Tirumala TVS – Authorized TVS dealer in Bidarahalli, Bengaluru. Explore TVS bikes, scooters, EVs, service and genuine spare parts." />
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
 
 <!-- HEADER -->
-<header style="border-bottom:1px solid #e5e7eb;">
+<header style="background:#fff;border-bottom:1px solid #e5e7eb;">
   <div style="max-width:1200px;margin:auto;padding:16px;display:flex;justify-content:space-between;align-items:center;">
-    <h2 style="margin:0;">Tirumala TVS</h2>
+    <h2 style="margin:0;font-weight:700;">Tirumala TVS</h2>
     <nav>
-      <a href="index.html" style="margin-right:16px;">Home</a>
-      <a href="models.html" style="margin-right:16px;">Models</a>
+      <a href="index.html" style="margin-right:20px;">Home</a>
+      <a href="models.html" style="margin-right:20px;">Models</a>
       <a href="contacts.html">Contact</a>
     </nav>
   </div>
 </header>
 
-<!-- HERO -->
-<section style="background:#0b4fd8;color:#fff;">
-  <div style="max-width:1200px;margin:auto;padding:70px 16px;">
-    <h1 style="font-size:46px;margin-bottom:12px;">
-      Welcome to Tirumala TVS
-    </h1>
-    <p style="font-size:20px;max-width:700px;opacity:0.95;">
-      Your trusted authorized TVS dealership in Bidarahalli, Bengaluru —
-      offering the complete range of TVS motorcycles, scooters, electric vehicles,
-      service and genuine spare parts.
-    </p>
+<!-- HERO (BIKEWALE STYLE) -->
+<section style="
+  position:relative;
+  height:75vh;
+  background:url('assets/hero-bike.jpg') center/cover no-repeat;
+">
+  <!-- DARK OVERLAY -->
+  <div style="
+    position:absolute;
+    inset:0;
+    background:rgba(0,0,0,0.65);
+  "></div>
 
-    <a href="models.html"
-       style="display:inline-block;margin-top:24px;padding:14px 30px;background:#fff;color:#0b4fd8;border-radius:6px;text-decoration:none;font-weight:600;">
-      Explore TVS Models
-    </a>
+  <!-- CONTENT -->
+  <div style="
+    position:relative;
+    z-index:2;
+    height:100%;
+    display:flex;
+    align-items:center;
+  ">
+    <div style="max-width:1200px;margin:auto;padding:0 16px;color:#fff;">
+      <h1 style="font-size:52px;margin-bottom:14px;">
+        Find the Right TVS Two-Wheeler
+      </h1>
+      <p style="font-size:20px;max-width:600px;margin-bottom:30px;">
+        Explore the complete range of TVS bikes, scooters and electric vehicles
+        at Tirumala TVS, Bidarahalli – Bengaluru.
+      </p>
+
+      <a href="models.html"
+         style="
+           display:inline-block;
+           padding:14px 36px;
+           background:#e11d48;
+           color:#fff;
+           font-size:16px;
+           font-weight:600;
+           border-radius:6px;
+           text-decoration:none;
+         ">
+        Explore TVS Models
+      </a>
+    </div>
   </div>
 </section>
 
-<!-- ABOUT -->
-<section style="max-width:1200px;margin:auto;padding:60px 16px;">
-  <h2 style="color:#0b4fd8;font-size:32px;margin-bottom:16px;">
-    About Tirumala TVS
-  </h2>
-
-  <p style="max-width:900px;">
-    Tirumala TVS is an authorized TVS Motor Company dealership located at
-    Bidarahalli, Bengaluru. We are committed to delivering a premium two-wheeler
-    buying and ownership experience. From stylish commuter scooters to
-    performance-oriented motorcycles and electric mobility solutions,
-    we cater to every rider’s need.
-  </p>
-</section>
-
-<!-- WHY CHOOSE US -->
+<!-- LOCATION STRIP -->
 <section style="background:#f5f7fb;">
-  <div style="max-width:1200px;margin:auto;padding:60px 16px;">
-    <h2 style="color:#0b4fd8;font-size:32px;margin-bottom:24px;">
-      Why Choose Tirumala TVS?
-    </h2>
-
-    <ul style="line-height:2;">
-      <li>Authorized TVS sales, service and spares</li>
-      <li>Complete range of TVS bikes, scooters and EVs</li>
-      <li>Experienced service technicians</li>
-      <li>Transparent pricing and genuine spare parts</li>
-      <li>Easy finance, insurance and exchange options</li>
-    </ul>
+  <div style="max-width:1200px;margin:auto;padding:24px 16px;">
+    <strong>📍 Bidarahalli, Bengaluru</strong> &nbsp;|&nbsp;
+    Authorized TVS Sales • Service • Genuine Spare Parts • Finance & Insurance
   </div>
 </section>
 
-<!-- MODELS OVERVIEW -->
+<!-- SIMPLE INFO SECTION -->
 <section style="max-width:1200px;margin:auto;padding:60px 16px;">
-  <h2 style="color:#0b4fd8;font-size:32px;margin-bottom:24px;">
-    Our TVS Product Range
+  <h2 style="color:#0b4fd8;margin-bottom:16px;">
+    Why Tirumala TVS?
   </h2>
 
-  <div style="line-height:2;">
-    <strong>Scooters:</strong>
-    XL 100, Zest 110, Jupiter 113, Jupiter 125, Ntorq 125, Ntorq 150, iQube Electric  
-    <br/><br/>
-    <strong>Motorcycles:</strong>
-    Raider, Apache RTR 160, Apache RTR 200, Apache RR 310, Ronin
-  </div>
-
-  <a href="models.html"
-     style="display:inline-block;margin-top:20px;padding:12px 26px;background:#0b4fd8;color:#fff;border-radius:6px;text-decoration:none;">
-    View All Models
-  </a>
-</section>
-
-<!-- SERVICES -->
-<section style="background:#f5f7fb;">
-  <div style="max-width:1200px;margin:auto;padding:60px 16px;">
-    <h2 style="color:#0b4fd8;font-size:32px;margin-bottom:24px;">
-      Sales & Services
-    </h2>
-
-    <ul style="line-height:2;">
-      <li>New two-wheeler sales</li>
-      <li>Authorized TVS service center</li>
-      <li>Genuine TVS spare parts & accessories</li>
-      <li>Finance and insurance assistance</li>
-      <li>Exchange facility</li>
-    </ul>
-  </div>
-</section>
-
-<!-- LOCATION -->
-<section style="max-width:1200px;margin:auto;padding:60px 16px;">
-  <h2 style="color:#0b4fd8;font-size:32px;margin-bottom:16px;">
-    Visit Our Showroom
-  </h2>
-
-  <p style="max-width:900px;">
-    D Cross, Bidarahalli Main Road, Cheemasandra,  
-    Bengaluru, Karnataka – 560049
+  <p style="max-width:900px;line-height:1.8;">
+    Tirumala TVS is an authorized TVS Motor Company dealership committed to delivering
+    a premium ownership experience. From daily commuters to performance motorcycles
+    and electric scooters, we help you choose the right two-wheeler with confidence.
   </p>
-
-  <p>
-    📞 <strong>Phone / WhatsApp:</strong> 9964946512  
-    <br/>
-    📧 <strong>Email:</strong> tirumalatvs716@gmail.com
-  </p>
-</section>
-
-<!-- CTA -->
-<section style="background:#0b4fd8;color:#fff;">
-  <div style="max-width:1200px;margin:auto;padding:60px 16px;">
-    <h2 style="font-size:34px;margin-bottom:12px;">
-      Ready to Ride with TVS?
-    </h2>
-    <p style="font-size:18px;max-width:700px;">
-      Visit Tirumala TVS today or contact us to book a test ride, service appointment
-      or to know the best offers on TVS two-wheelers.
-    </p>
-
-    <a href="contacts.html"
-       style="display:inline-block;margin-top:20px;padding:14px 30px;background:#fff;color:#0b4fd8;border-radius:6px;text-decoration:none;font-weight:600;">
-      Contact Us
-    </a>
-  </div>
 </section>
 
 <!-- FOOTER -->
