--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Tirumala TVS | Authorized TVS Dealer – Bengaluru</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Tirumala TVS – Authorized TVS dealer in Bidarahalli, Bengaluru. Explore TVS bikes, scooters, EVs, service and genuine spare parts." />
+  <meta name="description" content="Tirumala TVS – Authorized TVS dealer in Bidarahalli, Bengaluru. Explore TVS bikes, scooters, EVs, prices and offers." />
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
@@ -13,7 +13,7 @@
 <!-- HEADER -->
 <header style="background:#fff;border-bottom:1px solid #e5e7eb;">
   <div style="max-width:1200px;margin:auto;padding:16px;display:flex;justify-content:space-between;align-items:center;">
-    <h2 style="margin:0;font-weight:700;">Tirumala TVS</h2>
+    <h2 style="margin:0;">Tirumala TVS</h2>
     <nav>
       <a href="index.html" style="margin-right:20px;">Home</a>
       <a href="models.html" style="margin-right:20px;">Models</a>
@@ -22,72 +22,95 @@
   </div>
 </header>
 
-<!-- HERO (BIKEWALE STYLE) -->
-<section style="
-  position:relative;
-  height:75vh;
-  background:url('assets/hero-bike.jpg') center/cover no-repeat;
-">
-  <!-- DARK OVERLAY -->
-  <div style="
-    position:absolute;
-    inset:0;
-    background:rgba(0,0,0,0.65);
-  "></div>
+<!-- HERO -->
+<section style="position:relative;height:70vh;background:#000;">
+  <div style="position:absolute;inset:0;background:url('assets/hero-bike.jpg') center/cover no-repeat;opacity:0.35;"></div>
 
-  <!-- CONTENT -->
-  <div style="
-    position:relative;
-    z-index:2;
-    height:100%;
-    display:flex;
-    align-items:center;
-  ">
+  <div style="position:relative;z-index:2;height:100%;display:flex;align-items:center;">
     <div style="max-width:1200px;margin:auto;padding:0 16px;color:#fff;">
-      <h1 style="font-size:52px;margin-bottom:14px;">
-        Find the Right TVS Two-Wheeler
+      <h1 style="font-size:48px;margin-bottom:12px;">
+        Find Your Perfect TVS Two-Wheeler
       </h1>
-      <p style="font-size:20px;max-width:600px;margin-bottom:30px;">
-        Explore the complete range of TVS bikes, scooters and electric vehicles
-        at Tirumala TVS, Bidarahalli – Bengaluru.
+      <p style="font-size:20px;max-width:650px;margin-bottom:30px;">
+        Bikes, scooters & electric vehicles – trusted service and best offers at Tirumala TVS, Bengaluru.
       </p>
 
       <a href="models.html"
-         style="
-           display:inline-block;
-           padding:14px 36px;
-           background:#e11d48;
-           color:#fff;
-           font-size:16px;
-           font-weight:600;
-           border-radius:6px;
-           text-decoration:none;
-         ">
-        Explore TVS Models
+         style="padding:14px 34px;background:#e11d48;color:#fff;border-radius:6px;text-decoration:none;font-weight:600;">
+        Browse All Models
       </a>
     </div>
   </div>
 </section>
 
-<!-- LOCATION STRIP -->
+<!-- QUICK INFO STRIP -->
 <section style="background:#f5f7fb;">
-  <div style="max-width:1200px;margin:auto;padding:24px 16px;">
-    <strong>📍 Bidarahalli, Bengaluru</strong> &nbsp;|&nbsp;
-    Authorized TVS Sales • Service • Genuine Spare Parts • Finance & Insurance
+  <div style="max-width:1200px;margin:auto;padding:20px 16px;">
+    <strong>📍 Bidarahalli, Bengaluru</strong> |
+    Sales • Service • Genuine Spare Parts • Finance & Insurance
   </div>
 </section>
 
-<!-- SIMPLE INFO SECTION -->
+<!-- MODELS SHORTCUT CARDS -->
 <section style="max-width:1200px;margin:auto;padding:60px 16px;">
-  <h2 style="color:#0b4fd8;margin-bottom:16px;">
-    Why Tirumala TVS?
-  </h2>
+  <h2 style="margin-bottom:30px;">Popular TVS Models</h2>
 
-  <p style="max-width:900px;line-height:1.8;">
-    Tirumala TVS is an authorized TVS Motor Company dealership committed to delivering
-    a premium ownership experience. From daily commuters to performance motorcycles
-    and electric scooters, we help you choose the right two-wheeler with confidence.
-  </p>
+  <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:24px;">
+
+    <div style="padding:24px;border:1px solid #e5e7eb;border-radius:12px;">
+      <h3>TVS XL 100</h3>
+      <p>India’s most trusted moped for work & business.</p>
+      <a href="models/xl100.html">View Details →</a>
+    </div>
+
+    <div style="padding:24px;border:1px solid #e5e7eb;border-radius:12px;">
+      <h3>TVS Zest 110</h3>
+      <p>Lightweight scooter for effortless city riding.</p>
+      <a href="models/zest110.html">View Details →</a>
+    </div>
+
+    <div style="padding:24px;border:1px solid #e5e7eb;border-radius:12px;">
+      <h3>TVS Jupiter 125</h3>
+      <p>Premium comfort scooter with strong performance.</p>
+      <a href="models/jupiter125.html">View Details →</a>
+    </div>
+
+    <div style="padding:24px;border:1px solid #e5e7eb;border-radius:12px;">
+      <h3>TVS Ntorq 125</h3>
+      <p>Sporty scooter with race-inspired design.</p>
+      <a href="models/ntorq125.html">View Details →</a>
+    </div>
+
+  </div>
+</section>
+
+<!-- QUICK ACTIONS -->
+<section style="background:#f9fafb;">
+  <div style="max-width:1200px;margin:auto;padding:60px 16px;">
+    <h2 style="margin-bottom:30px;">Quick Actions</h2>
+
+    <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:24px;">
+
+      <div style="padding:24px;border-radius:12px;background:#fff;">
+        <h3>📞 Book Test Ride</h3>
+        <p>Experience your favourite TVS two-wheeler before buying.</p>
+        <a href="contacts.html">Contact Us →</a>
+      </div>
+
+      <div style="padding:24px;border-radius:12px;background:#fff;">
+        <h3>🛠 Service & Support</h3>
+        <p>Authorized service with genuine TVS spare parts.</p>
+        <a href="contacts.html">Know More →</a>
+      </div>
+
+      <div style="padding:24px;border-radius:12px;background:#fff;">
+        <h3>💰 Finance & Insurance</h3>
+        <p>Easy EMI options and complete insurance support.</p>
+        <a href="contacts.html">Enquire →</a>
+      </div>
+
+    </div>
+  </div>
 </section>
 
 <!-- FOOTER -->
