--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Tirumala TVS | Authorized TVS Dealer – Bengaluru</title>
+  <title>Tirumala TVS | Authorized TVS Dealer in Bengaluru</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Tirumala TVS – Authorized TVS dealer in Bidarahalli, Bengaluru. Explore TVS bikes, scooters, EVs, prices and offers." />
+  <meta name="description" content="Tirumala TVS – Authorized TVS two-wheeler dealer in Bidarahalli, Bengaluru. Explore bikes, scooters, EVs, prices, offers, service & finance." />
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
@@ -29,84 +29,144 @@
   <div style="position:relative;z-index:2;height:100%;display:flex;align-items:center;">
     <div style="max-width:1200px;margin:auto;padding:0 16px;color:#fff;">
       <h1 style="font-size:48px;margin-bottom:12px;">
-        Find Your Perfect TVS Two-Wheeler
+        Explore TVS Bikes & Scooters
       </h1>
-      <p style="font-size:20px;max-width:650px;margin-bottom:30px;">
-        Bikes, scooters & electric vehicles – trusted service and best offers at Tirumala TVS, Bengaluru.
+      <p style="font-size:20px;max-width:700px;margin-bottom:30px;">
+        India’s trusted two-wheeler brand — commuter bikes, premium scooters,
+        sporty performance machines and electric vehicles.
       </p>
 
       <a href="models.html"
          style="padding:14px 34px;background:#e11d48;color:#fff;border-radius:6px;text-decoration:none;font-weight:600;">
-        Browse All Models
+        View All TVS Models
       </a>
     </div>
   </div>
 </section>
 
-<!-- QUICK INFO STRIP -->
+<!-- DEALER INFO -->
 <section style="background:#f5f7fb;">
-  <div style="max-width:1200px;margin:auto;padding:20px 16px;">
-    <strong>📍 Bidarahalli, Bengaluru</strong> |
-    Sales • Service • Genuine Spare Parts • Finance & Insurance
+  <div style="max-width:1200px;margin:auto;padding:24px 16px;">
+    <strong>📍 Tirumala TVS – Bidarahalli, Bengaluru</strong><br>
+    Authorized TVS Dealer | Sales • Service • Genuine Spare Parts • Finance & Insurance
   </div>
 </section>
 
-<!-- MODELS SHORTCUT CARDS -->
+<!-- MODEL CATEGORIES -->
 <section style="max-width:1200px;margin:auto;padding:60px 16px;">
-  <h2 style="margin-bottom:30px;">Popular TVS Models</h2>
+  <h2 style="margin-bottom:24px;">Explore by Category</h2>
 
   <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:24px;">
 
-    <div style="padding:24px;border:1px solid #e5e7eb;border-radius:12px;">
-      <h3>TVS XL 100</h3>
-      <p>India’s most trusted moped for work & business.</p>
-      <a href="models/xl100.html">View Details →</a>
+    <div style="padding:26px;border:1px solid #e5e7eb;border-radius:12px;">
+      <h3>🛵 Scooters</h3>
+      <p>Comfortable, fuel-efficient scooters for daily commuting and family use.</p>
+      <ul>
+        <li><a href="models/zest110.html">TVS Zest 110</a></li>
+        <li><a href="models/jupiter125.html">TVS Jupiter 125</a></li>
+        <li><a href="models/ntorq125.html">TVS Ntorq 125</a></li>
+      </ul>
     </div>
 
-    <div style="padding:24px;border:1px solid #e5e7eb;border-radius:12px;">
-      <h3>TVS Zest 110</h3>
-      <p>Lightweight scooter for effortless city riding.</p>
-      <a href="models/zest110.html">View Details →</a>
+    <div style="padding:26px;border:1px solid #e5e7eb;border-radius:12px;">
+      <h3>🏍 Motorcycles</h3>
+      <p>From daily commuters to sporty and premium motorcycles.</p>
+      <ul>
+        <li><a href="models/raider.html">TVS Raider</a></li>
+        <li><a href="models/ronin.html">TVS Ronin</a></li>
+        <li><a href="models/apache160.html">Apache Series</a></li>
+      </ul>
     </div>
 
-    <div style="padding:24px;border:1px solid #e5e7eb;border-radius:12px;">
-      <h3>TVS Jupiter 125</h3>
-      <p>Premium comfort scooter with strong performance.</p>
-      <a href="models/jupiter125.html">View Details →</a>
+    <div style="padding:26px;border:1px solid #e5e7eb;border-radius:12px;">
+      <h3>⚡ Electric Vehicles</h3>
+      <p>Smart, connected and eco-friendly electric mobility.</p>
+      <ul>
+        <li><a href="models/iqube.html">TVS iQube</a></li>
+      </ul>
     </div>
 
-    <div style="padding:24px;border:1px solid #e5e7eb;border-radius:12px;">
-      <h3>TVS Ntorq 125</h3>
-      <p>Sporty scooter with race-inspired design.</p>
-      <a href="models/ntorq125.html">View Details →</a>
-    </div>
+  </div>
+</section>
 
+<!-- POPULAR MODELS -->
+<section style="background:#f9fafb;">
+  <div style="max-width:1200px;margin:auto;padding:60px 16px;">
+    <h2 style="margin-bottom:30px;">Popular TVS Models</h2>
+
+    <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:24px;">
+
+      <div style="padding:24px;background:#fff;border-radius:12px;">
+        <h3>TVS XL 100</h3>
+        <p>Legendary moped for business, delivery and daily work.</p>
+        <a href="models/xl100.html">View Specs & Price →</a>
+      </div>
+
+      <div style="padding:24px;background:#fff;border-radius:12px;">
+        <h3>TVS Jupiter 125</h3>
+        <p>Premium family scooter with class-leading comfort.</p>
+        <a href="models/jupiter125.html">View Specs & Price →</a>
+      </div>
+
+      <div style="padding:24px;background:#fff;border-radius:12px;">
+        <h3>TVS Ntorq 125</h3>
+        <p>Race-inspired performance scooter with SmartXonnect.</p>
+        <a href="models/ntorq125.html">View Specs & Price →</a>
+      </div>
+
+      <div style="padding:24px;background:#fff;border-radius:12px;">
+        <h3>TVS Raider</h3>
+        <p>Sporty commuter motorcycle with aggressive styling.</p>
+        <a href="models/raider.html">View Specs & Price →</a>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+<!-- WHY TVS -->
+<section style="max-width:1200px;margin:auto;padding:60px 16px;">
+  <h2 style="margin-bottom:24px;">Why Choose TVS?</h2>
+
+  <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:24px;">
+    <div>
+      <h4>✔ Trusted Indian Brand</h4>
+      <p>TVS Motor Company is known for reliability, performance and innovation.</p>
+    </div>
+    <div>
+      <h4>✔ Low Maintenance</h4>
+      <p>Affordable service costs and excellent spare parts availability.</p>
+    </div>
+    <div>
+      <h4>✔ Wide Range</h4>
+      <p>From entry-level mopeds to premium motorcycles and EVs.</p>
+    </div>
   </div>
 </section>
 
 <!-- QUICK ACTIONS -->
-<section style="background:#f9fafb;">
+<section style="background:#f5f7fb;">
   <div style="max-width:1200px;margin:auto;padding:60px 16px;">
-    <h2 style="margin-bottom:30px;">Quick Actions</h2>
+    <h2 style="margin-bottom:30px;">Quick Links</h2>
 
     <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:24px;">
 
-      <div style="padding:24px;border-radius:12px;background:#fff;">
+      <div style="padding:26px;background:#fff;border-radius:12px;">
         <h3>📞 Book Test Ride</h3>
-        <p>Experience your favourite TVS two-wheeler before buying.</p>
-        <a href="contacts.html">Contact Us →</a>
+        <p>Schedule a test ride for your favourite TVS vehicle.</p>
+        <a href="contacts.html">Book Now →</a>
       </div>
 
-      <div style="padding:24px;border-radius:12px;background:#fff;">
-        <h3>🛠 Service & Support</h3>
+      <div style="padding:26px;background:#fff;border-radius:12px;">
+        <h3>🛠 Service Appointment</h3>
         <p>Authorized service with genuine TVS spare parts.</p>
-        <a href="contacts.html">Know More →</a>
+        <a href="contacts.html">Contact Service →</a>
       </div>
 
-      <div style="padding:24px;border-radius:12px;background:#fff;">
+      <div style="padding:26px;background:#fff;border-radius:12px;">
         <h3>💰 Finance & Insurance</h3>
-        <p>Easy EMI options and complete insurance support.</p>
-        <a href="contacts.html">Enquire →</a>
+        <p>Easy EMI options and complete insurance assistance.</p>
+        <a href="contacts.html">Enquire Now →</a>
       </div>
 
     </div>
