--- a/models.html
+++ b/models.html
@@ -2,20 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>TVS Models | Tirumala TVS</title>
+  <title>TVS Models | Bikes, Scooters & EVs – Tirumala TVS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Explore all TVS bikes, scooters and electric vehicles at Tirumala TVS, Bengaluru. View specifications, prices and features." />
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
 
 <!-- HEADER -->
-<header style="border-bottom:1px solid #e5e7eb;">
+<header style="background:#fff;border-bottom:1px solid #e5e7eb;">
   <div style="max-width:1200px;margin:auto;padding:16px;display:flex;justify-content:space-between;align-items:center;">
     <h2 style="margin:0;">Tirumala TVS</h2>
     <nav>
-      <a href="index.html" style="margin-right:16px;">Home</a>
-      <a href="models.html" style="margin-right:16px;">Models</a>
+      <a href="index.html" style="margin-right:20px;">Home</a>
+      <a href="models.html" style="margin-right:20px;font-weight:600;">Models</a>
       <a href="contacts.html">Contact</a>
     </nav>
   </div>
@@ -23,47 +24,119 @@
 
 <!-- HERO -->
 <section style="background:#0b4fd8;color:#fff;">
-  <div style="max-width:1200px;margin:auto;padding:50px 16px;">
-    <h1 style="font-size:40px;margin-bottom:8px;">TVS Two-Wheeler Models</h1>
-    <p style="font-size:18px;opacity:0.95;">
-      Explore the complete range of TVS bikes and scooters
+  <div style="max-width:1200px;margin:auto;padding:60px 16px;">
+    <h1 style="font-size:44px;margin-bottom:12px;">TVS Two-Wheelers</h1>
+    <p style="font-size:18px;max-width:800px;opacity:0.95;">
+      Browse the complete range of TVS bikes, scooters and electric vehicles
+      available at Tirumala TVS, Bidarahalli – Bengaluru.
     </p>
   </div>
 </section>
 
-<!-- MODELS LIST -->
-<main style="max-width:1200px;margin:auto;padding:40px 16px;">
+<!-- CONTENT -->
+<main style="max-width:1200px;margin:auto;padding:70px 16px;">
 
   <!-- SCOOTERS -->
-  <section style="margin-bottom:50px;">
-    <h2>Scooters</h2>
-    <ul style="line-height:2;">
-      <li><a href="models/xl100.html">TVS XL 100</a></li>
-      <li><a href="models/zest110.html">TVS Zest 110</a></li>
-      <li><a href="models/jupiter113.html">TVS Jupiter 113</a></li>
-      <li><a href="models/jupiter125.html">TVS Jupiter 125</a></li>
-      <li><a href="models/ntorq125.html">TVS Ntorq 125</a></li>
-      <li><a href="models/ntorq150.html">TVS Ntorq 150</a></li>
-      <li><a href="models/iqube.html">TVS iQube (Electric)</a></li>
-    </ul>
+  <section style="margin-bottom:80px;">
+    <h2 style="margin-bottom:26px;">🛵 TVS Scooters</h2>
+
+    <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:28px;">
+
+      <div class="model-card">
+        <h3>TVS XL 100</h3>
+        <p>Reliable moped for work, delivery and daily business use.</p>
+        <a href="models/xl100.html">View Specs & Price →</a>
+      </div>
+
+      <div class="model-card">
+        <h3>TVS Zest 110</h3>
+        <p>Lightweight and stylish scooter for effortless city rides.</p>
+        <a href="models/zest110.html">View Specs & Price →</a>
+      </div>
+
+      <div class="model-card">
+        <h3>TVS Jupiter 113</h3>
+        <p>Comfort-focused family scooter with smooth performance.</p>
+        <a href="models/jupiter113.html">View Specs & Price →</a>
+      </div>
+
+      <div class="model-card">
+        <h3>TVS Jupiter 125</h3>
+        <p>Premium scooter with strong engine and class-leading comfort.</p>
+        <a href="models/jupiter125.html">View Specs & Price →</a>
+      </div>
+
+      <div class="model-card">
+        <h3>TVS Ntorq 125</h3>
+        <p>Sporty performance scooter with SmartXonnect technology.</p>
+        <a href="models/ntorq125.html">View Specs & Price →</a>
+      </div>
+
+      <div class="model-card">
+        <h3>TVS Ntorq 150</h3>
+        <p>High-performance scooter with racing DNA and aggressive styling.</p>
+        <a href="models/ntorq150.html">View Specs & Price →</a>
+      </div>
+
+    </div>
   </section>
 
   <!-- MOTORCYCLES -->
-  <section style="margin-bottom:50px;">
-    <h2>Motorcycles</h2>
-    <ul style="line-height:2;">
-      <li><a href="models/raider.html">TVS Raider</a></li>
-      <li><a href="models/apache160.html">TVS Apache RTR 160</a></li>
-      <li><a href="models/apache200.html">TVS Apache RTR 200</a></li>
-      <li><a href="models/rr310.html">TVS Apache RR 310</a></li>
-      <li><a href="models/ronin.html">TVS Ronin</a></li>
-    </ul>
+  <section style="margin-bottom:80px;">
+    <h2 style="margin-bottom:26px;">🏍 TVS Motorcycles</h2>
+
+    <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:28px;">
+
+      <div class="model-card">
+        <h3>TVS Raider</h3>
+        <p>Sporty 125cc motorcycle with strong performance and modern design.</p>
+        <a href="models/raider.html">View Specs & Price →</a>
+      </div>
+
+      <div class="model-card">
+        <h3>TVS Ronin</h3>
+        <p>Modern-retro motorcycle built for comfort and relaxed riding.</p>
+        <a href="models/ronin.html">View Specs & Price →</a>
+      </div>
+
+      <div class="model-card">
+        <h3>TVS Apache RTR 160</h3>
+        <p>Race-bred motorcycle with agile handling and strong mid-range.</p>
+        <a href="models/apache160.html">View Details →</a>
+      </div>
+
+      <div class="model-card">
+        <h3>TVS Apache RTR 200</h3>
+        <p>Advanced performance bike with ride modes and ABS.</p>
+        <a href="models/apache160.html#rtr200">View Details →</a>
+      </div>
+
+      <div class="model-card">
+        <h3>TVS Apache RR 310</h3>
+        <p>Premium fully-faired sport motorcycle with track-level technology.</p>
+        <a href="models/apache160.html#rr310">View Details →</a>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- ELECTRIC -->
+  <section>
+    <h2 style="margin-bottom:26px;">⚡ TVS Electric Vehicles</h2>
+
+    <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:28px;">
+      <div class="model-card">
+        <h3>TVS iQube</h3>
+        <p>Smart, connected and eco-friendly electric scooter for urban mobility.</p>
+        <a href="models/iqube.html">View Specs & Price →</a>
+      </div>
+    </div>
   </section>
 
 </main>
 
 <!-- FOOTER -->
-<footer style="border-top:1px solid #e5e7eb;margin-top:40px;">
+<footer style="border-top:1px solid #e5e7eb;margin-top:80px;">
   <div style="max-width:1200px;margin:auto;padding:20px 16px;text-align:center;">
     © 2026 Tirumala TVS. All rights reserved.
   </div>
