--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Tirumala TVS | Authorized TVS Dealer in Bengaluru</title>
+  <title>Tirumala TVS | Authorized TVS Dealer in Bidarahalli, Bengaluru</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Tirumala TVS – Authorized TVS two-wheeler dealer in Bidarahalli, Bengaluru. Explore bikes, scooters, EVs, prices, offers, service & finance." />
+  <meta name="description" content="Tirumala TVS is an authorized TVS dealer in Bidarahalli, Bengaluru. Explore TVS bikes, scooters, electric vehicles, service, finance and test rides." />
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
@@ -29,22 +29,22 @@
   <div style="position:relative;z-index:2;height:100%;display:flex;align-items:center;">
     <div style="max-width:1200px;margin:auto;padding:0 16px;color:#fff;">
       <h1 style="font-size:48px;margin-bottom:12px;">
-        Explore TVS Bikes & Scooters
+        Explore TVS Two-Wheelers
       </h1>
-      <p style="font-size:20px;max-width:700px;margin-bottom:30px;">
-        India’s trusted two-wheeler brand — commuter bikes, premium scooters,
-        sporty performance machines and electric vehicles.
+      <p style="font-size:20px;max-width:720px;margin-bottom:30px;">
+        Bikes, scooters and electric vehicles from India’s trusted two-wheeler brand.
+        Visit Tirumala TVS for sales, service, finance and test rides.
       </p>
 
       <a href="models.html"
          style="padding:14px 34px;background:#e11d48;color:#fff;border-radius:6px;text-decoration:none;font-weight:600;">
-        View All TVS Models
+        View TVS Models
       </a>
     </div>
   </div>
 </section>
 
-<!-- DEALER INFO -->
+<!-- DEALER INFO STRIP -->
 <section style="background:#f5f7fb;">
   <div style="max-width:1200px;margin:auto;padding:24px 16px;">
     <strong>📍 Tirumala TVS – Bidarahalli, Bengaluru</strong><br>
@@ -52,124 +52,106 @@
   </div>
 </section>
 
-<!-- MODEL CATEGORIES -->
+<!-- ABOUT TVS & DEALERSHIP -->
 <section style="max-width:1200px;margin:auto;padding:60px 16px;">
-  <h2 style="margin-bottom:24px;">Explore by Category</h2>
+  <h2>About Tirumala TVS</h2>
+  <p style="max-width:900px;">
+    Tirumala TVS is an authorized dealership of TVS Motor Company, serving customers
+    in and around Bidarahalli, Bengaluru. We help customers choose the right
+    two-wheeler by offering transparent information, test rides, finance assistance
+    and reliable after-sales support.
+  </p>
 
-  <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:24px;">
-
-    <div style="padding:26px;border:1px solid #e5e7eb;border-radius:12px;">
-      <h3>🛵 Scooters</h3>
-      <p>Comfortable, fuel-efficient scooters for daily commuting and family use.</p>
-      <ul>
-        <li><a href="models/zest110.html">TVS Zest 110</a></li>
-        <li><a href="models/jupiter125.html">TVS Jupiter 125</a></li>
-        <li><a href="models/ntorq125.html">TVS Ntorq 125</a></li>
-      </ul>
-    </div>
-
-    <div style="padding:26px;border:1px solid #e5e7eb;border-radius:12px;">
-      <h3>🏍 Motorcycles</h3>
-      <p>From daily commuters to sporty and premium motorcycles.</p>
-      <ul>
-        <li><a href="models/raider.html">TVS Raider</a></li>
-        <li><a href="models/ronin.html">TVS Ronin</a></li>
-        <li><a href="models/apache160.html">Apache Series</a></li>
-      </ul>
-    </div>
-
-    <div style="padding:26px;border:1px solid #e5e7eb;border-radius:12px;">
-      <h3>⚡ Electric Vehicles</h3>
-      <p>Smart, connected and eco-friendly electric mobility.</p>
-      <ul>
-        <li><a href="models/iqube.html">TVS iQube</a></li>
-      </ul>
-    </div>
-
-  </div>
+  <p style="max-width:900px;">
+    TVS Motor Company is one of India’s most respected two-wheeler manufacturers,
+    known for innovation, performance, fuel efficiency and long-term reliability.
+  </p>
 </section>
 
-<!-- POPULAR MODELS -->
+<!-- PRODUCT CATEGORIES -->
 <section style="background:#f9fafb;">
   <div style="max-width:1200px;margin:auto;padding:60px 16px;">
-    <h2 style="margin-bottom:30px;">Popular TVS Models</h2>
+    <h2>TVS Product Range</h2>
 
     <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:24px;">
 
-      <div style="padding:24px;background:#fff;border-radius:12px;">
-        <h3>TVS XL 100</h3>
-        <p>Legendary moped for business, delivery and daily work.</p>
-        <a href="models/xl100.html">View Specs & Price →</a>
+      <div class="model-card">
+        <h3>🛵 Scooters</h3>
+        <p>
+          TVS scooters are designed for comfort, mileage and everyday convenience.
+          Popular models include Jupiter (110 & 125), Ntorq 125 and Zest 110.
+        </p>
+        <a href="models.html">Explore Scooters →</a>
       </div>
 
-      <div style="padding:24px;background:#fff;border-radius:12px;">
-        <h3>TVS Jupiter 125</h3>
-        <p>Premium family scooter with class-leading comfort.</p>
-        <a href="models/jupiter125.html">View Specs & Price →</a>
+      <div class="model-card">
+        <h3>🏍 Motorcycles</h3>
+        <p>
+          From commuter bikes like Raider to premium motorcycles like Apache RR 310
+          and Ronin, TVS offers something for every riding style.
+        </p>
+        <a href="models.html">Explore Motorcycles →</a>
       </div>
 
-      <div style="padding:24px;background:#fff;border-radius:12px;">
-        <h3>TVS Ntorq 125</h3>
-        <p>Race-inspired performance scooter with SmartXonnect.</p>
-        <a href="models/ntorq125.html">View Specs & Price →</a>
-      </div>
-
-      <div style="padding:24px;background:#fff;border-radius:12px;">
-        <h3>TVS Raider</h3>
-        <p>Sporty commuter motorcycle with aggressive styling.</p>
-        <a href="models/raider.html">View Specs & Price →</a>
+      <div class="model-card">
+        <h3>⚡ Electric Vehicles</h3>
+        <p>
+          TVS iQube electric scooter delivers smooth performance, smart connectivity
+          and low running cost for city commuting.
+        </p>
+        <a href="models/iqube.html">Explore iQube →</a>
       </div>
 
     </div>
   </div>
 </section>
 
-<!-- WHY TVS -->
+<!-- SERVICES -->
 <section style="max-width:1200px;margin:auto;padding:60px 16px;">
-  <h2 style="margin-bottom:24px;">Why Choose TVS?</h2>
+  <h2>Sales, Service & Support</h2>
 
-  <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:24px;">
-    <div>
-      <h4>✔ Trusted Indian Brand</h4>
-      <p>TVS Motor Company is known for reliability, performance and innovation.</p>
+  <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:24px;">
+
+    <div class="model-card">
+      <h3>New Vehicle Sales</h3>
+      <p>
+        Get latest TVS models with transparent pricing. Prices are displayed as
+        <strong>“starting from”</strong> and may vary by variant.
+      </p>
+      <a href="models.html">View Models →</a>
     </div>
-    <div>
-      <h4>✔ Low Maintenance</h4>
-      <p>Affordable service costs and excellent spare parts availability.</p>
+
+    <div class="model-card">
+      <h3>Service Appointments</h3>
+      <p>
+        Authorized TVS service using genuine spare parts and trained technicians.
+      </p>
+      <a href="contacts.html">Book Service →</a>
     </div>
-    <div>
-      <h4>✔ Wide Range</h4>
-      <p>From entry-level mopeds to premium motorcycles and EVs.</p>
+
+    <div class="model-card">
+      <h3>Test Rides & Finance</h3>
+      <p>
+        Book test rides, get EMI options, insurance support and exchange assistance.
+      </p>
+      <a href="contacts.html">Enquire Now →</a>
     </div>
+
   </div>
 </section>
 
-<!-- QUICK ACTIONS -->
+<!-- LOCATION -->
 <section style="background:#f5f7fb;">
   <div style="max-width:1200px;margin:auto;padding:60px 16px;">
-    <h2 style="margin-bottom:30px;">Quick Links</h2>
-
-    <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:24px;">
-
-      <div style="padding:26px;background:#fff;border-radius:12px;">
-        <h3>📞 Book Test Ride</h3>
-        <p>Schedule a test ride for your favourite TVS vehicle.</p>
-        <a href="contacts.html">Book Now →</a>
-      </div>
-
-      <div style="padding:26px;background:#fff;border-radius:12px;">
-        <h3>🛠 Service Appointment</h3>
-        <p>Authorized service with genuine TVS spare parts.</p>
-        <a href="contacts.html">Contact Service →</a>
-      </div>
-
-      <div style="padding:26px;background:#fff;border-radius:12px;">
-        <h3>💰 Finance & Insurance</h3>
-        <p>Easy EMI options and complete insurance assistance.</p>
-        <a href="contacts.html">Enquire Now →</a>
-      </div>
-
-    </div>
+    <h2>Visit Our Showroom</h2>
+    <p>
+      D Cross, Bidarahalli Main Road, Cheemasandra,<br>
+      Bengaluru, Karnataka – 560049
+    </p>
+    <p>
+      📞 <strong>Phone / WhatsApp:</strong> 9964946512<br>
+      📧 <strong>Email:</strong> tirumalatvs716@gmail.com
+    </p>
   </div>
 </section>
 
